<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LOSR_CrudClientes">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_Codigo"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_Nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_Apellido"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_Correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextUsr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_Usr"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextPasswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_Passwd"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button_insertar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicInsertar"
        android:text="@string/btn_insertar" />

    <Button
        android:id="@+id/button_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicBuscar"
        android:text="@string/btn_buscar" />

    <Button
        android:id="@+id/button_eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicEliminar"
        android:text="@string/btn_eliminar" />

    <Button
        android:id="@+id/button_editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicEditar"
        android:text="@string/btn_editar" />

</LinearLayout>